syntax = "proto3";

package greeting;

message Greeting {
    string message = 1;
}

message Person {
    string name = 1;
}
message Empty {}

service GreetingService {
    rpc hello (Person) returns (Greeting) {};
    rpc helloServerSide (Empty) returns (stream Greeting) {};
    rpc helloClientSide (stream Person) returns (Greeting) {};
    rpc helloBidirectional (stream Person) returns (stream Greeting) {};
}
